<resources>
    <string name="app_name">Manipulação de Views</string>

    <string name="titulo">Cadastrar Livros</string>
    <string name="autor">Autor:</string>
    <string name="sinopse">Sinopse:</string>
    <string name="romance">Romance</string>
    <string name="suspense">Suspense</string>
    <string name="drama">Drama</string>
    <string name="terror">Terror</string>
    <string name="genero">Gênero</string>
    <string name="limpar">Cadastrar Livro</string>
    <string name="titulolivro">Título:</string>

</resources>