<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/margem">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/book" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulolivro"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/edtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autor"

        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sinopse"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/edtSinopse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:layout_marginTop="@dimen/margem"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margem"
        android:layout_marginTop="@dimen/margem">

        <CheckBox
            android:id="@+id/chkRomance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/romance"/>

        <CheckBox
            android:id="@+id/chkSuspense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suspense"/>

        <CheckBox
            android:id="@+id/chkDrama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drama"/>

        <CheckBox
            android:id="@+id/chkTerror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terror"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margem"
        android:layout_marginTop="@dimen/margem">


        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"/>

    </LinearLayout>


</LinearLayout>